kubernetes/route-express.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: express-demo-route
  namespace: express-demo
spec:
  to:
    kind: Service
    name: express-demo-service
    weight: 100
  port:
    targetPort: 3000
  wildcardPolicy: None
